searchbird: update to latest scala-bootstrapper